--- a/client.html
+++ b/client.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HueMenorah client</title>
+    <title>popsicle</title>
 
     <style type="text/css">
         body {
@@ -24,15 +24,6 @@
         }
     </style>
 
-    <!-- load Firebase library -->
-    
-    <script src="https://cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
-
-    <!-- load jQuery library -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
 
     <!-- Commands go here. -->
 
@@ -47,7 +38,7 @@
         var image_database = new Firebase(fb_url) ;
 
         image_database.child( client_id ).on("value", function ( client_setting ) {
-
+/*
             console.log ( 'getting config for ***CLIENT ' + client_id + '***...' ) ;
 
             var image_url = client_setting.val().path ;
@@ -58,40 +49,35 @@
 
             var delay = client_setting.val().delay ;
             console.log("delay: " + delay);  //
-
-            if ( jQuery('#img_fg').length ) {
-                // Load new image, fade the old one, and swap IDs
-                var img = jQuery("<img id='img_bg' />").attr('src', image_folder + image_url )
-                        .on('load', function() {
-                            if (!this.complete || typeof this.naturalWidth == "undefined" || this.naturalWidth == 0) {
-                                console.error('broken image!'); // image did not load correctly!
-                            } else {
-                                // Image loaded successfully.
-                                jQuery('body').append( img ) ;                  // add new image to the DOM
-                                jQuery('#img_fg').delay(delay*1000).fadeOut(1000, function () {   // fade out the foreground image
-                                    jQuery('#img_fg').remove();                 // remove the foreground image from the DOM
-                                    jQuery('#img_bg').attr('id','img_fg') ;     // make the bg image the new fg image
-                                });
-                            }
-                        });
-            }
-            else {
-                // Just load an image.
-                var img = jQuery("<img id='img_fg' />").attr('src', image_folder + image_url )
-                        .on('load', function() {
-                            if (!this.complete || typeof this.naturalWidth == "undefined" || this.naturalWidth == 0) {
-                                console.error('broken image!'); // image did not load correctly!
-                            } else {
-                                // Image loaded successfully.
-                                jQuery('body').append( img );                   // add new image to the DOM
-                            }
-                        });
-
-            }
+*/
 
         });
     </script>
 </head>
 <body>
+
+<!-- add Fish's code here -->
+
+
+<!-- load Firebase library -->
+
+<script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyCuVBF2WWt2tD53KO40S2dungEEx3I6yJQ",
+        authDomain: "anything-is-popsicle.firebaseapp.com",
+        databaseURL: "https://anything-is-popsicle.firebaseio.com",
+        projectId: "anything-is-popsicle",
+        storageBucket: "",
+        messagingSenderId: "604298729851"
+    };
+    firebase.initializeApp(config);
+</script>
+
+<!-- load jQuery library -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
 </body>
 </html>
