Added screen index and external stylesheet.

--- a/master.html
+++ b/master.html
@@ -3,31 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Popsicle server</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
-<style type="text/css">
-    body {
-        font-family: Helvetica, sans-serif;
-        font-size: 1.5em;
-    }
-
-    input[type="text"] {
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 1.5em;
-    }
-
-    #red, input[id^="red"] {
-        color: #d00;
-    }
-
-    #green, input[id^="green"] {
-        color: #0d0;
-    }
-
-    #blue, input[id^="blue"] {
-        color: #00d;
-    }
-</style>
 <body>
 <form method="get">
     <h1 id="red">red</h1>
