--- a/slave.html
+++ b/slave.html
@@ -6,35 +6,7 @@
     <meta charset="UTF-8">
     <title>popsicle</title>
 
-    <style type="text/css">
-        body {
-            margin: 0 ;
-            overflow: hidden;
-            /*background-color: black ;*/
-        }
-        img {
-            position: fixed;
-            width: 100% ;
-        }
-        #img_fg {
-            z-index: 10;
-        }
-        #img_bg {
-            z-index: 9;
-        }
-
-        div.horizontal {
-            display: flex;
-            justify-content: center;
-        }
-
-        div.vertical {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
 
     <!-- Commands go here. -->
 
@@ -49,8 +21,10 @@
 //        var fb_url = 'https://huemenorah.firebaseio.com/' ;
 
         //var image_database = new Firebase(fb_url) ;
+        var popsicles = new Firebase(popsicle_url) ;
 
-        //image_database.child( client_id ).on("value", function ( client_setting ) {
+        image_database.child( 'popsicles/'+color+'/'+monitor ).on("value", function ( character ) {
+            console.log (character.val()) ;
 /*
             console.log ( 'getting config for ***CLIENT ' + client_id + '***...' ) ;
 
@@ -64,7 +38,7 @@
             console.log("delay: " + delay);  //
 */
 
-        //});
+        });
     </script>
 </head>
 <body>
