--- a/slave.html
+++ b/slave.html
@@ -5,6 +5,11 @@
     <title>popsicle</title>
 
     <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <style type="text/css">
+        body {
+            margin: 0 ;
+        }
+    </style>
 
 </head>
 <body>
