uppercase letterform urls.

--- a/slave.html
+++ b/slave.html
@@ -65,7 +65,7 @@
     function update_character(character) {
 
         letterform = document.getElementById('letterform');
-        letterform.src = character.toLowerCase() + '.gif';
+        letterform.src = character.toUpperCase() + '.gif';
 //        letterform.title = character.toLowerCase() ;
 
     }
