added bigger button.

--- a/master.html
+++ b/master.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <form id="popsicle_master" method="get">
+    <p><input type="submit" value="update popsicles" style="padding:1em 1em; background-color: red; color:#fff; text-transform: uppercase; font-weight:bold; font-size: .8em"></p>
 
     <script type="text/javascript">
 
@@ -31,7 +32,7 @@
 
         }
     </script>
-    <p><input type="submit" value="update popsicles"></p>
+    <p><input type="submit" value="update popsicles" style="padding:1em 1em; background-color: red; color:#fff; text-transform: uppercase; font-weight:bold; font-size: .8em"></p>
 </form>
 
 <!-- load Firebase library -->
